<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IMC</string>
    <string name="menu_settings">Settings</string>
    <string name="poidsLabel">Poids (kg) :</string>
    <string name="tailleLabel">Taille :</string>
    <string name="poidsHint">Poids</string>
    <string name="tailleHint">Taille</string>
    <string name="metreLabel">Mètre</string>
    <string name="cmLabel">Centimètre</string>
    <string name="megaFunctionLabel">Afficher l\'interpretation de votre IMC</string>
    <string name="calculateIMCButtonLabel">Calculer l\'IMC</string>
    <string name="razButtonLabel">Remise à zéro.</string>
    <string name="resultLabel">Résultat de votre IMC :</string>
    <string name="infoLabel">Vous devez cliquer sur le bouton \"Calculer l\'IMC\" pour obtenir un résultat.</string>
    <color name="textColor">#0AC92B</color>
    <string name="errMessage">La taille doit être supérieur à zéro.</string>
    <string name="warningMessage">Veuillez remplir les champs poids et taille.</string>
    <string name="author">author : tarik.djebien@gmail.com</string>

</resources>