<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:gravity="center_horizontal"
            android:paddingRight="5dp"
            android:text="@string/poidsLabel"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/poidsValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:hint="@string/poidsHint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:gravity="center_horizontal"
            android:paddingRight="5dp"
            android:text="@string/tailleLabel"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tailleValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:hint="@string/tailleHint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioCentimetre"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioMetre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metreLabel" />

        <RadioButton
            android:id="@+id/radioCentimetre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmLabel" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/mega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/megaFunctionLabel" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/calcul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="50"
            android:text="@string/calculateIMCButtonLabel" />

        <Button
            android:id="@+id/raz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="50"
            android:text="@string/razButtonLabel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/resultLabel"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="90"
            android:gravity="center"
            android:text="@string/infoLabel" />
    </LinearLayout>

    <TextView
        android:id="@+id/author"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="5"
        android:gravity="bottom|right"
        android:text="@string/author"
        android:textColor="@color/textColor" />

</LinearLayout>